--- a/src/styles/main-style.css
+++ b/src/styles/main-style.css
@@ -23,11 +23,11 @@
 }
 
 .main-router-wrapper{
-
+   
 }
 
 .main-router-lg{
-   margin-left: 275px;
+   padding-left: 275px;
 }
 
 .sidebar-container{
@@ -84,4 +84,44 @@
 .ham-change .bar3 {
    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
    transform: rotate(45deg) translate(-8px, -8px) ;
+}
+
+.module-title-wrap {
+   padding: 20px 0px 0px 0px;
+}
+
+.module-title {
+   padding: 10px 0px 10px 30px;
+   background-color: #c7c7c7;
+   font-size: 20pt;
+}
+
+.module-subtitle {
+   font-size: 17pt;
+   padding: 15px 0px 15px 0px;
+}
+
+.text-align-center {
+   text-align: center;
+}
+
+.menu-item-list {
+   height: 0px;
+   background-color: #2d2d2d;
+   color: white;
+   transition: .3s;
+   overflow: hidden;
+}
+
+.menu-item {
+   cursor: pointer;
+   padding: 15px 0px 15px 0px;
+}
+
+.menu-item:hover {
+   background-color: white;
+   -webkit-transition: .3s;
+   -moz-transition: .3s;
+   transition: .3s;
+   color: black;
 }
