--- a/src/styles/main-style.css
+++ b/src/styles/main-style.css
@@ -125,3 +125,41 @@
    transition: .3s;
    color: black;
 }
+
+.h-table {
+   border-collapse: collapse;
+}
+
+.h-table th {
+   background-color: #688df1;
+   padding: 10px 25px 10px 25px;
+   border: solid 1px; 
+   border-color: black;   
+}
+
+.h-table td {
+   padding: 10px 25px 10px 25px;
+   border: solid 1px; 
+   white-space: nowrap;
+   border-color: black;   
+}
+
+.h-table tr{
+   background-color: #d7d7d7;
+}
+
+.h-table tr:nth-child(odd){
+   background-color: #d7d7d7;
+}
+
+.h-table tr:nth-child(even){
+   background-color: #bdbdbd;
+}
+
+.h-padding-basic {
+   padding: 15px 0px 0px 0px;
+}
+
+.h-overflow-scroll {
+   overflow: auto;
+}
