--- a/src/styles/main-style.css
+++ b/src/styles/main-style.css
@@ -96,6 +96,13 @@
    font-size: 20pt;
 }
 
+.register-title {
+   padding: 10px 0px 10px 0px;
+   background-color: #c7c7c7;
+   font-size: 20pt;
+   text-align: left;
+}
+
 .module-subtitle {
    font-size: 17pt;
    padding: 15px 0px 15px 0px;
@@ -103,6 +110,10 @@
 
 .text-align-center {
    text-align: center;
+}
+
+.text-align-left {
+   text-align: left;
 }
 
 .menu-item-list {
@@ -170,4 +181,11 @@
    .module-title{
       padding-left: 90px;
    }
+
+}
+
+@media screen and (max-width: 720px) {
+   .register-title{
+      text-align: center;
+   }   
 }
