--- a/src/styles/main-style.css
+++ b/src/styles/main-style.css
@@ -1,11 +1,20 @@
 .sidebar-wrapper{
    height: 60px;
-   background-color: #1d1d1d;
    width: 275px;
    height: 100%;
+   background-color: #1d1d1d;
+   overflow-y: scroll;
+   -ms-overflow-style: none;  
+   overflow: -moz-scrollbars-none; 
+   position: absolute;
+   left: 0;
+   top: 0;  
    z-index: 100;
 }
 
+.sidebar-wrapper::-webkit-scrollbar { 
+   display: none;
+}
 .sidebar-lg{
    -webkit-transition: .3s;
    -moz-transition: .3s;
@@ -92,7 +101,9 @@
 
 .module-title {
    padding: 10px 0px 10px 30px;
-   background-color: #c7c7c7;
+   /* background-color: #c7c7c7; */
+   background-color: #428bca;
+   color: #fff;
    font-size: 20pt;
 }
 
@@ -145,6 +156,10 @@
    -moz-border-radius-topright: 20px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
+}
+
+.h-table-wrap {
+   overflow-x: scroll;
 }
 
 .h-table th {
